--- a/Frontend_Angular/src/app/dashboard/dashboard.component.html
+++ b/Frontend_Angular/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,38 @@
 <div>
     <div>
-        <img src="../../assets/afterLogin.png" alt=""  />
+        <img width="100%" src="../../assets/afterLogin.png" alt=""  />
     
     </div>
-    <div (click)="onClick()" class="manage">
-        <img src="../../assets/savings.svg" alt="savings-logo" width="70px"/>
+    <div class="gridLayout">
+    <div class="manage">
+        <img width="60px" src="../../assets/qr-scan.svg" alt="savings-logo"/>
+        <p  >Pay with QR</p>
+    </div>
+
+     <div class="manage">
+        <img width="60px" src="../../assets/add-call.svg" alt="savings-logo"/>
+        <p  >Requests</p>
+    </div>
+     <div  class="manage">
+        <img width="60px" src="../../assets/chequebook-arrow-left.svg" alt="savings-logo"/>
+        <p  >Cards</p>
+    </div>
+     <div class="manage">
+        <img width="60px" src="../../assets/credit-cards.svg" alt="savings-logo"/>
+        <p  >Cards</p>
+    </div>
+     <div  class="manage">
+        <img width="60px" src="../../assets/hand-cash.svg" alt="savings-logo"/>
+        <p  >CashExpress</p>
+    </div>
+     <div  class="manage">
+        <img width="60px" src="../../assets/money-cash.svg" alt="savings-logo"/>
+        <p  >Bank Rates</p>
+    </div>
+     <div (click)="onClick()" class="manage">
+        <img width="60px" src="../../assets/savings.svg" alt="savings-logo"/>
         <p  >Manage your savings</p>
+    </div>
     </div>
 </div>
 
