--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
@@ -3,7 +3,7 @@
     <p>Start your savings</p>
     
 </nav>
-<p class="balance">Total Balance: &#8358;{{ this.totalBalance }}</p>
+<p class="balance">Account Balance: &#8358;{{ this.totalBalance }}</p>
 <p class="select"> Select a savings goal</p>
 <div class="content">
     <mat-card *ngFor="let saving of savingGoals; let i = index">
