--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -12,15 +12,15 @@
       <div class="part">
         <div class="Target">
           <h3>Target</h3>
-          <p>Money</p>
+          <p>&#8358;{{this.targetAmount}}</p>
         </div>
         <div class="Amount">
         <h3>Amount Saved</h3>
-          <p>Money</p>
+          <p>&#8358;{{this.amountSaved}}</p>
         </div>   
        <div class="Interest">
        <h3>Interest Earned</h3>
-       <p>Money</p>
+       <p>&#8358;{{this.interestEarned}}</p>
      </div>
       </div>
       </div>
