--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
@@ -1,6 +1,6 @@
 <nav> 
     <mat-icon  (click)="onClick()">arrow_back</mat-icon>
-    <p class="nav-content">Start your savings</p>
+    <p>Start your savings</p>
     
 </nav>
 <p class="balance">Total Balance: &#8358;{{ this.totalBalance }}</p>
