--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
@@ -29,18 +29,19 @@ header {
         padding: 1rem;
     }
     nav{
-      background-color: #ff3c00;
+      background-color: #E66935;
       color: white;
       display: flex;
       gap: 4rem;
       padding: 1rem;
+      align-items: center;
     }
     p{
       text-align: center;
        font-size: 16px; 
        font-weight: 700; 
        font-size: 1.2rem;
-       margin-bottom: 0;
+       margin: 0;
     }
     h3{
         text-align: center;
