--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
@@ -47,6 +47,7 @@ header {
 
   .Charges {
     color: #e66935;
+    text-align: center;
   }
   .AmountSaved {
     display: flex;
@@ -58,9 +59,10 @@ header {
         padding: 1rem;
         background-color: #E66935;
         border-radius:  10px;
-        width:80%;
-        margin: 0 auto;
+        width:86%;
+        margin: 2rem auto;
         color: white;
+        justify-content: space-between;
       
     } 
      /* .ImgText h2{} */
@@ -70,15 +72,27 @@ header {
       color: white;
       display: flex;
       gap: 4rem;
-      padding: 1rem;
+      padding: 0.8rem;
       align-items: center;
+    }
+    .text{
+      font-size: 20px;
+      width: 90%;
+      margin: 1rem auto;
     }
     h2{
       text-align: center;
-      margin: 0;
+      margin: 0.5rem 0 1rem 0.5rem;
     }
     h3{
       margin: 0;
+    }
+    .endDateTime{
+      display: flex;
+      flex-direction: column;
+       justify-content: center;
+          width: 90%;
+    margin: 0 auto;
     }
     /* p{
       text-align: center;
@@ -94,4 +108,8 @@ header {
       display:flex;
       gap:1rem;
   };
+  .form-check{
+    width:90%;
+    margin: 0 auto;
+  }
 }
