--- a/Frontend_Angular/src/app/create-target/create-target.component.css
+++ b/Frontend_Angular/src/app/create-target/create-target.component.css
@@ -13,7 +13,7 @@
     flex-direction: column;
   }
    nav{
-      background-color: #ff3c00;
+      background-color: #E66935;
       color: white;
       display: flex;
       gap: 4rem;
@@ -30,8 +30,8 @@
       text-align: center;
        font-size: 16px; 
        font-weight: 700; 
-       font-size: 1.2rem;
-       margin-bottom: 0;
+       font-size: 1.3rem;
+       margin: 0;
     }
 
    .selectAll {
@@ -55,7 +55,7 @@ select {
   background-size: 40px;
 };
 option:hover {
-  background-color: #ff3c00;
+  background-color: #E66935;
   color: white;
 };
  button{
