--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -27,10 +27,9 @@
    
 
   <div class="endDateTime">
-    <p class="EndDate">End Date:{{ this.endDate }}</p>
+    <p class="EndDate">{{this.endDate}}</p>
 
     <p class="Charges">You will be charged 5% of your Savings</p>
-    <p class="Charges">Charge:Amount</p>
 
     <div
       class="form-group form-check"
@@ -53,7 +52,7 @@
         class="btn btn-primary"
         [disabled]="!ProceedToCancelSavings"
         style="
-          background: #fa3d03;
+          background: #E66935;
           color: white;
           margin-top: 1rem;
           height: 50px;
