--- a/Frontend_Angular/src/app/create-target/create-target.component.css
+++ b/Frontend_Angular/src/app/create-target/create-target.component.css
@@ -1,3 +1,27 @@
+      .nav-content{
+      text-align: center;
+       font-size: 16px; 
+       font-weight: 700; 
+       font-size: 1.3rem;
+       margin: 0;
+    }
+
+   .selectAll {
+  background-color: #D9D9D9;
+  width:100%;
+  border-radius:12px;
+  margin-block: 1rem;
+  padding-inline:0.5rem;
+  height:2rem;
+  border:none
+
+}
+.of{
+  max-width: 95%;
+}
+.form-group{
+      max-width: -webkit-fill-available;
+}
   .container {
     max-width: 600px;
     margin: 0 auto;
@@ -19,7 +43,7 @@
       gap: 4rem;
       padding: 1rem;
     }
-    .form-group{
+    form{
   width: 90%;
   margin: 0 auto;
 }
