--- a/Frontend_Angular/src/app/savings-page/savings-page.component.css
+++ b/Frontend_Angular/src/app/savings-page/savings-page.component.css
@@ -1,40 +1,24 @@
-@media only screen and (max-width: 540px){
+
 
     nav{
-        background-color: #ff3c00;
+        background-color: #E66935;
         color: white;
         display: flex;
         gap: 4rem;
         padding: 1rem;
+        align-items: center;
       }
     .nav-content{
-      text-align: center;
        font-size: 16px; 
        font-weight: 700; 
        font-size: 1.2rem;
-       margin-bottom: 0;
+       margin: 0;
     }
-
-    button{
-        margin: 10px;
-        
-      background-color: #ff3c00;
-      height: 30px;
-      
-    
-      }
-      .totalBalance{
-        margin: 10px;
-        
-        height: 30px;
-      }
-    
+     
       div{
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-content: center;
-      }
-}
-
-
+        width: 90%;
+        margin:2rem auto;
+      };
+    
