--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
@@ -44,14 +44,14 @@ header {
        
     }
     button:hover{
-        background-color: #E66935;
+        background-color: #dd4f05;
         color: white;
-        border-color: #E66935;
+        border-color: #dd4f05;
 
     }
     
     nav{
-  background-color: #E66935;
+  background-color: #dd4f05;
   color: white;
   display: flex;
   gap: 4rem;
