--- a/Frontend_Angular/src/app/create-target/create-target.component.html
+++ b/Frontend_Angular/src/app/create-target/create-target.component.html
@@ -43,7 +43,7 @@
              <div *ngIf="formValid">{{ formValid }}</div>
              <p class="center">After creating this plan, you will be charged 5% of the amount you saved to make withdrawal.</p>
             <!-- <p class="error">Please accept terms and conditions first</p> -->
-        <button type="submit" class="btn btn-primary" [disabled]="!termsAndConditions" style="background: #E66935; color: white; margin-top: 1rem; height: 50px; width:100%; font-weight: 600; font-size: 1.1rem;"
+        <button type="submit" class="btn btn-primary" [disabled]="!termsAndConditions" style="background: #dd4f05; color: white; margin-top: 1rem; height: 50px; width:100%; font-weight: 600; font-size: 1.1rem;"
             mat-raised-button>Create Plan</button>
     </form>
   </main>
