--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -43,7 +43,7 @@
           </p>
 
           <button
-            style=" background: #E66935; color: white; margin-top: 1rem; height: 50px;"
+            style=" background: #dd4f05; color: white; margin-top: 1rem; height: 50px;"
             mat-raised-button
           >
             Login
