--- a/Frontend_Angular/src/app/savings-page/savings-page.component.css
+++ b/Frontend_Angular/src/app/savings-page/savings-page.component.css
@@ -1,7 +1,7 @@
 
 
     nav{
-        background-color: #E66935;
+        background-color: #dd4f05;
         color: white;
         display: flex;
         gap: 4rem;
