--- a/Frontend_Angular/src/app/savings-page/savings-page.component.html
+++ b/Frontend_Angular/src/app/savings-page/savings-page.component.html
@@ -9,7 +9,7 @@
     border: 2px solid #D9D9D9;
     border-radius: 10px;
     padding: 0.5rem" [(ngModel)]="totalBalance" id= "totalBalance" placeholder="Enter Total Balance">
-    <button   style=" background: #E66935; color: white; margin-top: 1rem;"
+    <button   style=" background: #dd4f05; color: white; margin-top: 1rem;"
             mat-raised-button (click)="onSubmit()">Submit</button>
 </div>
 
