--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
@@ -1,5 +1,5 @@
    nav{
-      background-color: #E66935;
+      background-color: #dd4f05;
       color: white;
       display: flex;
       gap: 4rem;
@@ -16,7 +16,7 @@
          margin: 0;
  } 
  .Charges {
-      color: #e66935;
+      color: #dd4f05;
     text-align: center;
   }
   .AmountSaved {
@@ -27,7 +27,7 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
-        background-color: #E66935;
+        background-color: #dd4f05;
         border-radius:  10px;
         width:86%;
         margin: 2rem auto;
@@ -62,5 +62,38 @@
     width:90%;
     margin: 0 auto;
   }
+  .popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 0.5rem;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index: 9999;
+}
+
+.popup p {
+  margin-bottom: 0.5rem;
+}
+
+.popup button {
+  background-color: #dd4f05;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+span{
+  color:#dd4f05
+
+}
+.button{
+  display: flex;
+  gap:0.5rem;
+}
+
   @media only screen and (max-width: 540px) {
 }
