--- a/Frontend_Angular/src/app/success-page/success-page.component.html
+++ b/Frontend_Angular/src/app/success-page/success-page.component.html
@@ -2,7 +2,7 @@
 <div class="centered-div">
     <img src="../../assets/mark.png" alt="mark" style="margin-bottom: 10px;"/>
     <button
-    style="background: #ff3c00; color: white; margin-top: 1rem; width: 80%; height: 50px;"
+    style="background: #dd4f05; color: white; margin-top: 1rem; width: 80%; height: 50px;"
     mat-raised-button (click)="onClick()">
   Successful
   </button>
