--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -50,7 +50,7 @@
       <button
         type="submit"
         class="btn btn-primary"
-        [disabled]="!ProceedToCancelSavings"
+        [disabled]="!ProceedToCancelSavings || this.amountSaved !== this.targetAmount"
         style="
           background: #dd4f05;
           color: white;
