--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -4,7 +4,7 @@
 </nav>
 
 <p class="text">See how close you are to achieving your goal</p>
-<div class="content">
+<div class="content" >
   <div class="ImgText">
     <!-- <img  src="../../assets/GTCO 2.svg" alt="HomeIcon" width="40px" />
      -->
@@ -50,7 +50,7 @@
       <button
         type="submit"
         class="btn btn-primary"
-        [disabled]="!ProceedToCancelSavings || this.amountSaved !== this.targetAmount"
+        [disabled]="!ProceedToCancelSavings"
         style="
           background: #dd4f05;
           color: white;
