--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -61,6 +61,7 @@
           font-size: 1.2rem;
         "
         mat-raised-button
+        (click)="onWithdraw()"
       >
         Withdraw Plan
       </button>
