--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -49,6 +49,7 @@
           >
             Login
           </button>
+          <ngx-spinner *ngIf="isLoading"></ngx-spinner>
         </form>
       
           <p>Not registered? <span>Sign Up</span></p>
