--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<body>
+<div>
+  <body>
       <div *ngIf="loginError">
         <p>An error occurred while logging in. Please try again later.</p>
       </div>
@@ -51,8 +52,11 @@
         </form>
       
           <p>Not registered? <span>Sign Up</span></p>
+    
       </div>
     
     
   </body>
+</div>
+
   
