--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -54,6 +54,7 @@
         </form>
       
           <p>Not registered? <span>Sign Up</span></p>
+          <app-dark-toggle></app-dark-toggle>
     
       </div>
     
