--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.css
@@ -55,8 +55,8 @@
     margin: 0 auto;
     }
     .part{
-      display:flex;
-      gap:1rem;
+      display:grid;
+          grid-template-columns: auto auto auto;
   };
   .form-check{
     width:90%;
