--- a/Frontend_Angular/src/app/app.component.html
+++ b/Frontend_Angular/src/app/app.component.html
@@ -2,6 +2,6 @@
  [ngClass]="{'dark-theme': themeService.isDarkThemeEnabled}">
     <router-outlet class="container"> 
 </router-outlet>
- <app-dark-toggle style="margin-left: 3rem;"></app-dark-toggle>
+ <!-- <app-dark-toggle style="margin-left: 3rem;"></app-dark-toggle> -->
 </body>
 
