--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -47,12 +47,34 @@
         Proceed</label
       >
 
-      <button
+   
+
+         <button
         type="submit"
         class="btn btn-primary"
         [disabled]="!ProceedToCancelSavings"
         style="
           background: #dd4f05;
+          color: white;
+          margin-top: 1rem;
+          height: 50px;
+          width: 100%;
+          font-weight:700;
+          font-size: 1.2rem;
+        "
+        mat-raised-button
+        (click)="onWithdraw()"
+        
+      >
+        OK
+      </button>
+
+         <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="!ProceedToCancelSavings"
+        style="
+          background: #b3b3b3;
           color: white;
           margin-top: 1rem;
           height: 50px;
