--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -74,7 +74,7 @@
         class="btn btn-primary"
         [disabled]="!ProceedToCancelSavings"
         style="
-          background: #b3b3b3;
+          background: #fc955e;
           color: white;
           margin-top: 1rem;
           height: 50px;
