--- a/Frontend_Angular/src/app/manage-savings/manage-savings.component.css
+++ b/Frontend_Angular/src/app/manage-savings/manage-savings.component.css
@@ -43,12 +43,12 @@ button{
    
 }
 button:hover{
-    background-color: #E66935;
+    background-color: #dd4f05;
     color: white;
-    border-color: #E66935;
+    border-color: #dd4f05;
 }
 nav{
-  background-color: #E66935;
+  background-color: #dd4f05;
   color: white;
   display: flex;
   gap: 4rem;
