--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -28,9 +28,6 @@
 
   <div class="endDateTime">
     <p class="EndDate">{{this.endDate}}</p>
-
-    <p class="Charges">You will be charged 5% of your Savings</p>
-
     <div
       class="form-group form-check"
       
@@ -63,7 +60,7 @@
           font-size: 1.2rem;
         "
         mat-raised-button
-        (click)="onWithdraw()"
+        (click)="onOk()"
         
       >
         OK
