--- a/Frontend_Angular/src/app/success-page/success-page.component.css
+++ b/Frontend_Angular/src/app/success-page/success-page.component.css
@@ -1,7 +1,7 @@
 .centered-div {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+    justify-content: center;
+    height: 100%;
     align-items: center;
-    position: relative;
-    top: 400px;
+    flex-direction: column;
   }
