--- a/Frontend_Angular/src/app/create-target/create-target.component.html
+++ b/Frontend_Angular/src/app/create-target/create-target.component.html
@@ -41,7 +41,7 @@
             <label class="form-check-label" for="termsAndConditions">I agree to the terms and conditions</label>
              </div>
              <div *ngIf="formValid">{{ formValid }}</div>
-             <p class="center">After creating this plan, you will be charged 5% of the amount you saved to make withdrawal.</p>
+             <p class="center">After creating this plan, you will be charged 5% of the amount you saved, if you withdraw or cancel before the end date</p>
             <!-- <p class="error">Please accept terms and conditions first</p> -->
         <button type="submit" class="btn btn-primary" [disabled]="!termsAndConditions" style="background: #dd4f05; color: white; margin-top: 1rem; height: 50px; width:100%; font-weight: 600; font-size: 1.1rem;"
             mat-raised-button>Create Plan</button>
